# car_service_crm_test

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/car_service_crm/: auth.py  crud.py  db.py  deps.py  main.py  models.py  schemas.py
src/car_service_crm/routers/: appointments.py  cars.py  documents.py  mechanics.py  services.py  users.py
src/car_service_crm/utils/: email.py  file.py
tests/: __init__.py  test_main.py
